Revision history for {{$dist->name}}

{{$NEXT}}
  - Change auto_split and multiline_type into read-write attributes: multiline_type can be changed back to undef
  - Add a new function called field_range that will return the elements in a given range.
  - Elaborated Pod for functions in Text::Parser::AutoSplit and mentioned them in Text::Parser Pod

0.918     2019-04-18 00:28:58-07:00 America/Los_Angeles
  - Add a test to ensure that auto_split works correctly even without auto_trim (Issue: #18)
  - Add a new method named this_line which works in all subclasses (Issue: #20)
  - Don't use setting method in Text::Parser::Multiline
  - Remove line_auto_manip and setting methods
  - Refactor code in Text::Parser::Multiline
  - Re-organize and simplify POD, test all links (Issue: #22)

0.917     2019-04-15 22:56:49-07:00 America/Los_Angeles
  - Fixed broken link in pod as reported by CPANTS. #15 (by M Anwar)
  - Fixed a similar broken link in pod as reported in CPANTS for save_record from Autoplit.pm
  - Added a new test to check that when both auto_split and auto_trim are on, auto_trim works first

0.916     2019-04-15 20:12:03-07:00 America/Los_Angeles
  - Minor patches to ensure class doesn't fail due to Syntax::Keyword::Try
  - Added test for one POD example
  - Made exceptions prominent on main POD page
  - Cleaned up CONTRIBUTING.md

0.915     2019-04-14 23:50:51-07:00 America/Los_Angeles
  - Remove exceptions based on Exception::Class and use Throwable::SugarFactory instead
  - Add Text::Parser::Errors. Use exceptions from here in Text::Parser code.
  - Make Dist::Zilla::Plugin::Test::TidyAll required only for the build phase of the distro - close issue #13 on Github
  - Update and improve POD to reference errors in Text::Parser::Errors package
  - Document the errors and make recommendations for error handling in POD
  - Add README.PATCHING, and update CONTRIBUTING.md

0.911     2019-04-11 21:17:53-07:00 America/Los_Angeles